testData/org/elixir_lang/inspection/no_parentheses_strict_test_case/FunctionSpaceEmptyParentheses.ex
# empty parentheses after a space after a function name should be marked as an error
function <error descr="unexpected parenthesis. If you are making a function call, do not insert spaces in between the function name and the opening parentheses.">()</error>
